xbox: Extend internals for \parbox

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -499,18 +499,18 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\@@_via_internal_box:nn}
+% \begin{macro}{\@@_via_internal_box:Nnn}
 %   Boxes up |#1| to its natural width in \cs{l_@@_internal_box}.
 %   The document-level names for dimensions (\cs{height}, \emph{etc}.) are
 %   then set up, before carrying out whatever \enquote{payload} operation is
 %   supplied as |#2|.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_via_internal_box:nn #1#2
+\cs_new_protected:Npn \@@_via_internal_box:Nnn #1#2#3
   {
     \group_begin:
-       \hbox_set:Nn \l_@@_internal_box {#1}
+       #1 \l_@@_internal_box {#2}
        \@@_document_names:
-       #2
+       #3
     \group_end:
   }
 %    \end{macrocode}
@@ -675,7 +675,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \xbox_to_wd:nnn #1#2#3
   {
-    \@@_via_internal_box:nn {#3}
+    \@@_via_internal_box:Nnn \hbox_set:Nn {#3}
       {
         \hbox_to_wd:nn {#1}
           {
@@ -695,7 +695,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \xbox_to_wd_and_ht:nnnn #1#2#3#4
   {
-    \@@_via_internal_box:nn {#4}
+    \@@_via_internal_box:Nnn \hbox_set:Nn {#4}
       {
         \vbox_to_ht:nn {#2}
           {
@@ -756,7 +756,7 @@
   }
 \cs_new_protected:Npn \xbox_raise_with_ht_and_dp:nnnn #1#2#3#4
   {
-    \@@_via_internal_box:nn {#4}
+    \@@_via_internal_box:Nnn \hbox_set:Nn {#4}
       {
         \hbox_set:Nn \l_@@_internal_box
           { \box_move_up:nn {#1} { \box_use_drop:N \l_@@_internal_box } }
