xbox: Notes on \framebox variation cf LaTeX2e/2.09

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -240,6 +240,15 @@
 %   and if neither are given is vertically centered. The picture-mode version
 %   uses no \meta{border} and uses the picture-mode linewidth rather than
 %   \cs{fboxrule}.
+%   \begin{texnote}
+%     In the current implementation, the version of \cs{framebox} here
+%     handles horizontal placement differently from the \LaTeXe{} one.
+%     In the latter, the \meta{content} is placed allowing horizontal space for
+%     the separation but \emph{not} the rules. That can lead to overlap when
+%     there is no separation distance. Vertically, both implementations use
+%     the same approach, and there is no chance of overlap. This aspect is
+%     for \emph{discussion}.
+%   \end{texnote}
 % \end{function}
 %
 % \section{Saving material in boxes}
