xbox: Add \underline
In text mode, not math mode is used at all, so
I've chosen to stick to \fboxsep/\fboxrule.

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -175,6 +175,15 @@
 %   the typeset \meta{content}.
 % \end{function}
 %
+% \begin{function}{\underline}
+%   \begin{syntax}
+%     \cs{underline}\marg{content}
+%   \end{syntax}
+%   In text mode, inserts the \meta{content} in a horizontal box and underlines
+%   it with a rule of width \cs{fboxrule} and separation \cs{fboxsep}. In math
+%   mode, uses the \TeX{} math mode primitive to directly underline content.
+% \end{function}
+%
 % \section{Typesetting material in frames}
 %
 % \begin{variable}{\fboxrule}
@@ -507,6 +516,19 @@
 %   The apparent size of the inserted box excludes the frame, \emph{i.e.}~the
 %   width  of the inserted material is simply $ \mathrm{width}
 %   ( \meta{content} )$. See also \cs{hbox_frame:nnn}.
+% \end{function}
+%
+% \begin{function}{\hbox_underline:nnn, \hbox_underline:nVV}
+%   \begin{syntax}
+%     \cs{hbox_underline:nnn} \Arg{content} \Arg{thickness} \Arg{border}
+%   \end{syntax}
+%   Inserts the \meta{content} in a horizontal box and underlines
+%   with a rule of \meta{thickness}. A \meta{border} is left between the
+%   \meta{content} and the frame. The frame will overprint any part of the
+%   \meta{content} which lies outside of the bounding box at natural size
+%   (\emph{i.e.}~the frame is printed \enquote{after} the \meta{content}).
+%   The apparent size of the inserted box includes the frame and the border,
+%   this affects only the depth (contrast with \cs{hbox_frame:nnn}).
 % \end{function}
 %
 % \begin{function}{\hbox_line_left:n, \hbox_line_center:n, \hbox_line_right:n}
@@ -1147,6 +1169,41 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\hbox_underline:nnn, \hbox_frame:nVV}
+% \begin{macro}{\@@_underline:nnn, \@@_underline:ffn}
+%   Much like framing, but with only one line.
+%    \begin{macrocode}
+\cs_new_protected:Npn \hbox_underline:nnn #1#2#3
+  { \@@_underline:ffn { \dim_eval:n {#2} } { \dim_eval:n {#3} } {#1} }
+\cs_generate_variant:Nn \hbox_underline:nnn { nVV }
+\cs_new_protected:Npn \@@_underline:nnn #1#2#3
+  {
+    \group_begin:
+      \hbox_set:Nn \l_@@_internal_box {#3}
+      \hbox:n
+        {
+          \box_use:N \l_@@_internal_box
+          \kern_horizontal:n { -\box_wd:N \l_@@_internal_box }
+          \box_move_down:nn { \box_dp:N \l_@@_internal_box + #2 + #1 }
+            {
+              \vbox:n
+                {
+                  \hbox:n
+                    {
+                      \kern_horizontal:n
+                        { \box_wd:N \l_@@_internal_box }
+                    }
+                   \rule_horizontal:nn {#1} { \c_zero_dim }
+                }
+            }
+        }
+    \group_end:
+  }
+\cs_generate_variant:Nn \@@_underline:nnn { ff }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}{\hbox_line_left:n, \hbox_line_center:n, \hbox_line_right:n}
 %   Necessary to implement the \cs{\ldots line} commands.
 %    \begin{macrocode}
@@ -1343,6 +1400,19 @@
           { \xbox_raise_with_ht:nnn {#1} {#2} {#4} }
           { \xbox_raise_with_ht_and_dp:nnnn {#1} {#2} {#3} {#4} }
       }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\underline}
+%   In text mode, this is like \cs{framebox}, in math mode there is a
+%   primitive (which ideally needs a new name).
+%    \begin{macrocode}
+\RenewDocumentCommand \underline { m }
+  {
+    \mode_if_math:TF
+      { \tex_underline:D {#1} }
+      { \xbox_underline:nVV {#1} \fboxrule \fboxsep }
   }
 %    \end{macrocode}
 % \end{macro}
