--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -1545,7 +1545,7 @@
 %   without taking up space. Unlike the plain \TeX{} versions, these correctly
 %   leave vertical mode.
 %    \begin{macrocode}
-\RenewDocumentCommand \clap { m }
+\NewDocumentCommand \clap { m }
   {
     \mode_leave_vertical:
     \hbox_overlap_center:n  {#1}
