Split up separation color backend
We will need to split more of it to get this
all right and support PostScript spot colors fully.

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -66,7 +66,8 @@
 % stack available with all modern drivers, and can use that.
 % Whilst \texttt{(x)dvipdfmx} does have its own approach to color specials,
 % it is easier to use \texttt{dvips}-like ones for all cases except direct
-% PDF output.
+% PDF output. Separations fall in between these \enquote{stools} as we
+% need a different method for essentially each backend.
 %
 % \subsection{\texttt{dvips}-style}
 %
@@ -138,13 +139,6 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\@@_backend_select_separation:nn}
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-  { \@@_backend_select:n {#1} }
-%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -244,6 +238,64 @@
 % \end{macro}
 % \end{macro}
 %
+%    \begin{macrocode}
+%</pdfmode>
+%    \end{macrocode}
+%
+% \subsection{Separations}
+%
+% Here, life gets interesting and we need essentially one approach per
+% backend.
+%
+%    \begin{macrocode}
+%<*dvipdmx|xdvipdfmx>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_select_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+  { \@@_backend_select:n {#1} }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvipdmx|xdvipdfmx>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvips>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_select_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+  { \@@_backend_select:n {#1} }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvips>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvisvgm>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_select_separation:nn}
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+  { \@@_backend_select:n {#1} }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvisvgm>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*pdfmode>
+%    \end{macrocode}
+%
 % \begin{macro}{\@@_backend_select_separation:nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
@@ -254,6 +306,7 @@
 %    \begin{macrocode}
 %</pdfmode>
 %    \end{macrocode}
+%
 %
 % \subsection{Fill and stroke color}
 %
