--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -252,9 +252,9 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_select_separation:nn}
+%   No support at present.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-  { \@@_backend_select:n {#1} }
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2 { }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -282,9 +282,9 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_select_separation:nn}
+%   No support at present.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-  { \@@_backend_select:n {#1} }
+\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2 { }
 %    \end{macrocode}
 % \end{macro}
 %
