--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -182,15 +182,13 @@
 % This is held until the start of shipout such that a document with no
 % actual output does not write anything.
 %    \begin{macrocode}
-\cs_if_exist:NTF \AtBeginDvi
-  { \AtBeginDvi }
-  { \use:n }
-    {
-      \bool_lazy_and:nnT
-        { \cs_if_exist_p:N \g__kernel_backend_header_bool }
-        { \g__kernel_backend_header_bool }
+\bool_if:NT \g__kernel_backend_header_bool
+  {
+    \cs_if_exist:NTF \AtBeginDvi
+      { \AtBeginDvi }
+      { \use:n }
         { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
-    }
+  }
 %    \end{macrocode}
 %
 % \begin{macro}
