First attempt at separations in dvips

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -1566,9 +1566,6 @@
 % \begin{macro}{\@@_model_convert:nnn}
 % \begin{macro}{\@@_model_separation_cielab:nnnnnn}
 % \begin{macro}{\@@_model_separation_cielab:nnnnnnn}
-% \begin{macro}{\@@_model_separation_init:nnnnn}
-% \begin{macro}{\@@_model_separation_init_cielab:n}
-% \begin{macro}{\@@_model_separation_init_cielab:nnnnn}
 %   Set up a new model: in general this has to be handled by a family-dependent
 %   function. To avoid some \enquote{interesting} questions with casing, we
 %   fold the case of the family name. The key--value list should always be
@@ -1699,7 +1696,7 @@
       }
     \@@_model_convert:nnn {#1} { cmyk } { rgb }
     \@@_model_convert:nnn {#1} { cmyk } { gray }
-    \@@_model_separation_init:nnnnn {#2} { /DeviceCMYK } { }
+    \@@_backend_separation_init:nnnnn {#2} { /DeviceCMYK } { }
       { 0 ~ 0 ~ 0 ~ 0 } { #3 ~ #4 ~ #5 ~ #6 }
   }
 \cs_new_protected:Npn \@@_model_separation_rgb:nnnnnn #1#2#3#4#5#6
@@ -1712,7 +1709,7 @@
       }
     \@@_model_convert:nnn {#1} { rgb } { cmyk }
     \@@_model_convert:nnn {#1} { rgb } { gray }
-    \@@_model_separation_init:nnnnn {#2} { /DeviceRGB } { }
+    \@@_backend_separation_init:nnnnn {#2} { /DeviceRGB } { }
       { 0 ~ 0 ~ 0 } { #3 ~ #4 ~ #5 }
   }
 \cs_new_protected:Npn \@@_model_separation_gray:nnnnnn #1#2#3#4#5#6
@@ -1732,7 +1729,7 @@
         \fp_eval:n {##1 * #3} ~
         \fp_eval:n {##1 * #3}
       }
-    \@@_model_separation_init:nnnnn {#2} { /DeviceGray } { } { 0 } {#3}
+    \@@_backend_separation_init:nnnnn {#2} { /DeviceGray } { } { 0 } {#3}
   }
 %    \end{macrocode}
 %   Generic model conversion \emph{via} an alternative intermediate.
@@ -1774,8 +1771,8 @@
   {
     \tl_if_exist:cTF { c_@@_model_whitepoint_cielab_ #1 _tl }
       {
-        \@@_model_separation_init_cielab:n {#1}
-        \@@_model_separation_init_cielab:nnnnn {#2} {#3} {#4} {#5} {#6}
+        \@@_backend_separation_init_cielab:n {#1}
+        \@@_backend_separation_init_cielab:nnnnn {#2} {#3} {#4} {#5} {#6}
         \cs_new:cpn { @@_convert_ #2 _cmyk:w } ##1 ~ ##2 \s_@@_stop
           { 0 ~ 0 ~ 0 ~ 1 }
         \cs_new:cpn { @@_convert_ #2 _rgb:w } ##1 ~ ##2 \s_@@_stop
@@ -1789,66 +1786,6 @@
       }
   }
 %    \end{macrocode}
-%   Initialising the PDF structures needs two parts: creating an object
-%   containing the \enquote{real} name of the Separation, then adding a reference
-%   to that to each page. The latter uses the internal name of the \texttt{cs}.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_model_separation_init:nnnnn #1#2#3#4#5
-  {
-    \pdf_object_now:nx { array }
-      {
-        /Separation
-        / \str_convert_pdfname:n {#1} ~ #2 ~
-        <<
-          /FunctionType ~ 2
-          /Domain ~ [0 ~ 1]
-          \tl_if_blank:nF {#3} { /Range ~ [#3] }
-          /C0 ~ [#4] ~
-          /C1 ~ [#5] /N ~ 1
-        >>
-      }
-    \use:x
-      {
-        \pdfcoredict_gput:nnn
-          { Page / Resources / ColorSpace }
-          { color \int_use:N \g_@@_separation_int }
-          { \pdf_object_last: }
-      }
-  }
-\cs_if_exist:NF \pdf_object_now:nn
-  { \cs_gset_protected:Npn \@@_model_separation_init:nnnnn #1#2#3#4#5 { } }
-%    \end{macrocode}
-%   For CIELAB colors, we need one object per document for the illuminant,
-%   plus initialisation of the color space referencing that object.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_model_separation_init_cielab:n #1
-  {
-    \pdf_object_new:nn { @@_illuminant_cielab_ #1 } { array }
-    \pdf_object_write:nx { @@_illuminant_cielab_ #1 }
-      {
-        /Lab ~
-        <<
-         /WhitePoint ~
-           [ \tl_use:c { c_@@_model_whitepoint_cielab_ #1 _tl } ]
-         /Range ~ [ \c_@@_model_range_lab_tl ]
-        >>
-     }
-  }
-\cs_if_exist:NF \pdf_object_new:nn
-  { \cs_gset_protected:Npn \@@_model_separation_init_cielab:n #1 { } }
-\cs_new_protected:Npn \@@_model_separation_init_cielab:nnnnn #1#2#3#4#5
-  {
-    \@@_model_separation_init:nnnnn
-      {#2}
-      { \pdf_object_ref:n { @@_illuminant_cielab_ #1 } }
-      { \c_@@_model_range_lab_tl }
-      { 100 ~ 0 ~ 0 }
-      { #3 ~ #4 ~ #5 }
-  }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
