--- a/l3backend/l3backend-header.dtx
+++ b/l3backend/l3backend-header.dtx
@@ -67,6 +67,16 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{TeXcolorsetspotcolor, setspotcolor}
+%   Support for separation/spot colors: this strange naming is so
+%   things work with the color stack.
+%    \begin{macrocode}	
+TeXDict begin
+/TeXcolorsetspotcolor { setcustomcolor } def 
+end
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{pdf.globaldict}
 %   A small global dictionary for backend use.
 %    \begin{macrocode}
