Missing "\begin{macrocode}"

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -295,6 +295,7 @@
 %   some data. This comes about as we have to deal with PDF-focussed data,
 %   which makes most sense \enquote{higher-up}. The approach is based on
 %   ideas from \url{https://tex.stackexchange.com/q/560093}.
+%    \begin{macrocode}
 \cs_new_protected:Npx \@@_backend_separation_init:nnnnn #1#2#3#4#5
   {
     \bool_if:NT \g__kernel_backend_header_bool
