--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -281,7 +281,7 @@
 % \begin{macro}{\@@_backend_select_separation:nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-  { \@@_backend_select:n {#1} }
+  { \@@_backend_select:n { setspotcolor ~ #1 ~ #2 } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -304,9 +304,8 @@
           { \AtBeginDvi }
           { \use:n }
             {
-              \exp_not:N \exp_args:Nx
                 \exp_not:N \@@_backend_separation_init:nnn
-                  { \exp_not:N \str_convert_pdfname:n {#1} } {#2} {#5}
+                  {#1} {#2} {#5}
             }
       }
   }
@@ -316,7 +315,8 @@
       {
         !
         TeXDict ~ begin ~
-        / #1 ~ [#3] ~ aload ~ pop ~ (#1) ~ 
+        /color \int_use:N \g_@@_separation_int \c_space_tl
+        [#3] ~ aload ~ pop ~ ( \str_convert_pdfname:n {#1} ) ~ 
         find \@@_backend_separation_init:n {#2} customcolor ~ def ~
         end
       }
