Enable separation colors in dvipdfmx

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -299,33 +299,6 @@
 % backend.
 %
 %    \begin{macrocode}
-%<*dvipdmx|xdvipdfmx>
-%    \end{macrocode}
-%
-% \begin{macro}{\@@_backend_select_separation:nn}
-%   No support at present.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_select_separation:nn #1#2 { }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}
-%   {\@@_backend_separation_init:nnnnn, \@@_backend_separation_init_cielab:nnnnn}
-% \begin{macro}{\@@_backend_separation_init_cielab:n}
-%   No support at present.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5 { }
-\cs_new_protected:Npn \@@_backend_separation_init_cielab:nnnnn #1#2#3#4#5 { }
-\cs_new_protected:Npn \@@_backend_separation_init_cielab:n #1 { }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
-%    \begin{macrocode}
-%</dvipdmx|xdvipdfmx>
-%    \end{macrocode}
-%
-%    \begin{macrocode}
 %<*dvips>
 %    \end{macrocode}
 %
@@ -423,26 +396,35 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<*pdfmode>
+%<*dvipdfmx|pdfmode|xdvipdfmx>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_select_separation:nn}
+%   Different syntaxes here as the stacks are accessed very differently.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
+%<*dvipdfmx|xdvipdfmx>
+  { \@@_backend_select:n { @#1 ~ [#2] } }
+%</dvipdfmx|xdvipdfmx>
+%<*pdfmode>
   { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
+%</pdfmode>
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
-%   {\@@_backend_separation_init:nnnnn, \@@_backend_separation_init_cielab:nnnnn}
+% \begin{macro}{\@@_backend_separation_init:nnnnn}
+% \begin{macro}{\@@_backend_separation_init:n}
+% \begin{macro}{\@@_backend_separation_init_cielab:nnnnn}
 % \begin{macro}{\@@_backend_separation_init_cielab:n}
 %   Initialising the PDF structures needs two parts: creating an object
 %   containing the \enquote{real} name of the Separation, then adding a reference
 %   to that to each page. The latter uses the internal name of the \texttt{cs}.
+%   For \texttt{(x)dvipdfmx}, the backend does most of the work so we need a
+%   simplified version.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5
   {
-    \pdf_object_now:nx { array }
+    \@@_backend_separation_init:n
       {
         /Separation
         / \str_convert_pdfname:n {#1} ~ #2 ~
@@ -454,6 +436,7 @@
           /C1 ~ [#5] /N ~ 1
         >>
       }
+%<*pdfmode>
     \use:x
       {
         \pdfcoredict_gput:nnn
@@ -461,9 +444,23 @@
           { color \int_use:N \g_@@_separation_int }
           { \pdf_object_last: }
       }
+%</pdfmode>
   }
 \cs_if_exist:NF \pdf_object_now:nn
   { \cs_gset_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5 { } }
+\cs_new_protected:Npn \@@_backend_separation_init:n #1
+  {
+%<*dvipdfmx|xdvipdfmx>
+    \__kernel_backend_literal:x
+      {
+        pdf:obj ~ @ color \int_use:N \g_@@_separation_int \c_space_tl
+          [#1]
+      }
+%</dvipdfmx|xdvipdfmx>
+%<*pdfmode>
+    \pdf_object_now:nx { array } {#1}
+%</pdfmode>  
+  }
 %    \end{macrocode}
 %   For CIELAB colors, we need one object per document for the illuminant,
 %   plus initialisation of the color space referencing that object.
@@ -497,9 +494,11 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
 %
 %    \begin{macrocode}
-%</pdfmode>
+%</dvipdfmx|pdfmode|xdvipdfmx>
 %    \end{macrocode}
 %
 % \subsection{Fill and stroke color}
