Rename xdvipdfmx backend to xetex

--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -89,10 +89,10 @@
   {l3backend-pdftex.def}{2020-08-07}{}
   {L3 backend support: PDF output (pdfTeX)}
 %</pdftex>
-%<*xdvipdfmx>
-  {l3backend-xdvipdfmx.def}{2020-08-07}{}
-  {L3 backend support: xdvipdfmx}
-%</xdvipdfmx>
+%<*xetex>
+  {l3backend-xetex.def}{2020-08-07}{}
+  {L3 backend support: XeTeX}
+%</xetex>
 %    \end{macrocode}
 %
 % The order of the backend code here is such that we get somewhat logical
@@ -101,9 +101,9 @@
 % are shared are
 % \begin{itemize}
 %   \item Color support is either \texttt{dvips}-like or \LuaTeX{}/pdfTeX{}-like.
-%   \item \LuaTeX{}/pdfTeX{} and \texttt{(x)dvipdfmx} share drawing routines.
-%   \item \texttt{xdvipdfmx} is largely the same as \texttt{dvipdfmx} so
-%     takes most of the same code.
+%   \item \LuaTeX{}/pdfTeX{} and \texttt{dvipdfmx}/\XeTeX{} share drawing routines.
+%   \item \XeTeX{} is the same as \texttt{dvipdfmx} other than image size
+%     extraction so takes most of the same code.
 % \end{itemize}
 %
 % \begin{macro}
@@ -312,13 +312,13 @@
 % \subsection{\texttt{dvipdfmx} backend}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % The \texttt{dvipdfmx} shares code with the PDF mode one (using the common
-% section to this file) but also with \texttt{xdvipdfmx}. The latter is close
+% section to this file) but also with \XeTeX{}. The latter is close
 % to identical to \texttt{dvipdfmx} and so all of the code here is extracted
-% for both backends, with some \texttt{clean up} for \texttt{xdvipdfmx} as
+% for both backends, with some \texttt{clean up} for \XeTeX{} as
 % required.
 %
 % \begin{macro}{\__kernel_backend_literal_pdf:n, \__kernel_backend_literal_pdf:x}
@@ -351,7 +351,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvisvgm} backend}
