--- a/l3backend/l3backend-box.dtx
+++ b/l3backend/l3backend-box.dtx
@@ -253,7 +253,7 @@
 % \subsection{\texttt{dvipdfmx} backend}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_clip:N}
@@ -327,7 +327,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvisvgm} backend}
