--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -64,14 +64,14 @@
 % one directly linked to drawings (or rather the split between filling
 % and stroking). General color is relatively easy to handle: we have a color
 % stack available with all modern drivers, and can use that.
-% Whilst \texttt{(x)dvipdfmx} does have its own approach to color specials,
+% Whilst \texttt{dvipdfmx}/\XeTeX{} does have its own approach to color specials,
 % it is easier to use \texttt{dvips}-like ones for all cases except direct
 % PDF output.
 %
 % \subsection{\texttt{dvips}-style}
 %
 %    \begin{macrocode}
-%<*dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%<*dvisvgm|dvipdfmx|dvips|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_pickup:N}
@@ -148,7 +148,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%</dvisvgm|dvipdfmx|dvips|xetex>
 %    \end{macrocode}
 %
 % \subsection{\LuaTeX{} and \pdfTeX{}}
@@ -263,13 +263,13 @@
 %
 % \subsection{Fill and stroke color}
 %
-% Here, \texttt{(x)dvipdfmx} follows \LuaTeX{} and \pdfTeX{},
+% Here, \texttt{dvipdfmx}/\XeTeX{} follows \LuaTeX{} and \pdfTeX{},
 % while for \texttt{dvips}
 % we have to manage fill and stroke color ourselves. We also handle
 % \texttt{dvisvgm} independently, as there we can create SVG directly.
 %
 %    \begin{macrocode}
-%<*dvipdfmx|luatex|pdftex|xdvipdfmx>
+%<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}
@@ -281,7 +281,7 @@
 %     \@@_backend_stroke_gray:n ,
 %     \@@_backend_stroke_rgb:n
 %   }
-%   Drawing (fill/stroke) color is handled in \texttt{(x)dvipdfmx} in the
+%   Drawing (fill/stroke) color is handled in \texttt{dvipdfmx}/\XeTeX{} in the
 %   same way as \LuaTeX{}/\pdfTeX{}. We use the same approach as earlier, except the
 %   color stack is not involved so the generic direct PDF operation is used.
 %   There is no worry about the nature of strokes: everything is handled
@@ -316,7 +316,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|luatex|pdftex|xdvipdfmx>
+%</dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
