--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -339,7 +339,7 @@
 %   In \texttt{dvips}, keeping the transformations in line with the engine
 %   is unfortunately not possible for scaling and rotations: even if we
 %   decompose the matrix into those operations, there is still no backend
-%   tracking (\emph{cf.}~\texttt{(x)dvipdfmx}). Thus we take the shortest
+%   tracking (\emph{cf.}~\texttt{dvipdfmx}/\XeTeX{}). Thus we take the shortest
 %   path available and simply dump the matrix as given.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_cm:nnnn #1#2#3#4
@@ -393,13 +393,13 @@
 %</dvips>
 %    \end{macrocode}
 %
-% \subsection{\LuaTeX{}, \pdfTeX{} and \texttt{(x)dvipdfmx}}
+% \subsection{\LuaTeX{}, \pdfTeX{}, \texttt{dvipdfmx} and \XeTeX{}}
 %
-% \LuaTeX{}, \pdfTeX{} and \texttt{(x)dvipdfmx} directly produce PDF output
+% \LuaTeX{}, \pdfTeX{}, \texttt{dvipdfmx} and \XeTeX{} directly produce PDF output
 % and understand a shared set of specials for drawing commands.
 %
 %    \begin{macrocode}
-%<*dvipdfmx|luatex|pdftex|xdvipdfmx>
+%<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \subsubsection{Drawing}
@@ -575,12 +575,12 @@
 %
 % \begin{macro}{\@@_backend_cm:nnnn}
 % \begin{macro}{\@@_backend_cm_aux:nnnn}
-%   Another split here between \LuaTeX{}/pdfTeX{} and \texttt{(x)dvipdfmx}.
+%   Another split here between \LuaTeX{}/pdfTeX{} and \texttt{dvipdfmx}/\XeTeX{}.
 %   In the former, we have a direct method to maintain alignment: the backend
-%   can use a matrix itself. For \texttt{(x)dvipdfmx}, we can to decompose the
+%   can use a matrix itself. For \texttt{dvipdfmx}/\XeTeX{}, we can to decompose the
 %   matrix into rotations and a scaling, then use those operations as they
 %   are handled by the backend. (There is backend support for matrix operations in
-%   \texttt{(x)dvipdfmx}, but as a matched pair so not suitable for the
+%   \texttt{dvipdfmx}/\XeTeX{}, but as a matched pair so not suitable for the
 %   \enquote{stand alone} transformation set up here.)
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_cm:nnnn #1#2#3#4
@@ -588,12 +588,12 @@
 %<*luatex|pdftex>
     \__kernel_backend_matrix:n { #1 ~ #2 ~ #3 ~ #4 }
 %</luatex|pdftex>
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
     \@@_backend_cm_decompose:nnnnN {#1} {#2} {#3} {#4}
       \@@_backend_cm_aux:nnnn
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
   }
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 \cs_new_protected:Npn \@@_backend_cm_aux:nnnn #1#2#3#4
   {
     \__kernel_backend_literal:x
@@ -617,7 +617,7 @@
           { \fp_eval:n { round ( -#4 , 5 ) } }
       }
   }
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -677,7 +677,7 @@
 %   way of specifying a transformation matrix exchanges where one would
 %   normally expect $B$ and $C$ to be.
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 \cs_new_protected:Npn \@@_backend_cm_decompose:nnnnN #1#2#3#4#5
   {
     \use:x
@@ -720,7 +720,7 @@
       { #5 {#1} {#2} {#3} {#4} }
       { #5 {#1} {#3} {#2} {#4} }
   }
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -739,21 +739,21 @@
 %<*luatex|pdftex>
     \@@_backend_cm:nnnn {#2} {#3} {#4} {#5}
 %</luatex|pdftex>
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
     \__kernel_backend_literal:n
       { pdf:btrans~matrix~ #2 ~ #3 ~ #4 ~ #5 ~ 0 ~ 0 }
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
     \hbox_overlap_right:n { \box_use:N #1 }
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
     \__kernel_backend_literal:n { pdf:etrans }
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
     \__kernel_backend_scope_end:
   }
 %    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|luatex|pdftex|xdvipdfmx>
+%</dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvisvgm} backend}
