--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -926,10 +926,11 @@
 %   \item[dvisvgm] Use the \texttt{dvisvgm} driver.
 %   \item[luatex] Use the direct PDF output mode of \LuaTeX{}
 %   \item[pdftex] Use the direct PDF output mode of \pdfTeX{}
-%   \item[xdvipdfmx] Use the \texttt{xdvipdfmx} driver (\XeTeX{} only).
+%   \item[xetex] Use the \XeTeX{} version of the \texttt{dvipdfmx} driver.
 % \end{itemize}
 % For historical reasons, there is also \texttt{pdfmode} as an equivalent of
-% \texttt{luatex} or \texttt{pdftex}, but this is deprecated.
+% \texttt{luatex} or \texttt{pdftex}, and \texttt{xdvipdfmx} as
+% an equivalent to \texttt{xetex}, but these are deprecated
 %
 % \DescribeOption{suppress-backend-headers}
 % The \texttt{suppress-backend-headers} option suppresses loading of
@@ -1405,7 +1406,7 @@
 \keys_define:nn { sys }
   {
     backend .choices:nn =
-      { dvipdfmx , dvips , dvisvgm , luatex , pdftex , pdfmode , xdvipdfmx }
+      { dvipdfmx , dvips , dvisvgm , luatex , pdftex , pdfmode , xdvipdfmx , xetex }
       { \sys_load_backend:n {#1} } ,
     check-declarations .code:n =
       {
